--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ html {
 :root {
   --primary-text-color: #757575;
   --title-text-color: #212121;
-  --primary-background-color: ;
+  --primary-background-color: #C4C4C4 ;
   --secondary-background-color: #f5f4fa;
   --black-background-color: #2f303a;
   --accent-color: #2196f3;
@@ -17,6 +17,8 @@ html {
   --footer-contact-color: rgba(255, 255, 255, 0.6);
   --logo-accent-color: #000000;
   --border-button-portfolio: #eeeeee;
+  --icon-color: #AFB1B8;
+
 }
 .page {
   color: var(--primary-text-color);
@@ -37,14 +39,25 @@ img {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .section.no-padding {
   padding-top: 0;
+}
+/* Header */
+.header-box {
+  display: flex;
+  align-items: center;
 }
 .page-header {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: #ececec;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .logo {
   margin-right: 93px;
@@ -101,29 +114,42 @@ img {
   display: flex;
   margin-left: auto;
 }
-.contact-nav .link:hover,
-.contact-nav .link:focus {
-  color: var(--accent-color);
-}
 .site-nav .link.current {
   color: var(--accent-color);
 }
-.header-box {
-  display: flex;
+.header-contact {
+  display: inline-flex;
   align-items: center;
+  justify-content: center;
+}
+.header-icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
+.header-contact:hover,
+.header-contact:focus {
+  color: var(--accent-color);
 }
 /* hero */
 .hero{
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--black-background-color);
+  background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),
+  rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: var(--primary-background-color);
   color: var(--white-text-color);
   text-align: center;
 }
 .hero-title {
   margin: 0 auto;
-  width: 696px;
-
+  width: 696px; 
   font-family: roboto;
   font-weight: 900;
   font-size: 44px;
@@ -156,28 +182,6 @@ img {
 .button:focus {
   color: #188ce8;
 }
-/* button portfolio */
-.button-filter {
-  display: inline-block;
-  padding: 6px 22px;
-  min-width: 73px;
-  border-radius: 4px;
-  border: var(--border-filter-button);
-
-  color: var(--title-text-color);
-  background-color: var(--secondary-background-color);
-  font-family: inherit;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.63;
-  text-align: center;
-  cursor: pointer;
-}
-.button-filter:hover,
-.button-filter:focus {
-  color: var(--white-text-color);
-  background-color: var(--accent-color);
-}
 /* section */
 .section-title {
   margin-top: 0;
@@ -188,7 +192,7 @@ img {
   line-height: 1.17;
   text-align: center;
 }
-/* features */
+/* Переваги */
 .features {
   display: flex;
   justify-content: space-between;
@@ -211,6 +215,20 @@ img {
 
   font-size: 14px;
   line-height: 1.71;
+}
+.features-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  background-color: var(--secondary-background-color);
+  width: 270px;
+  height: 120px;
+}
+.features-icon {
+  width: 70px;
+  height: 70px;
 }
 /* -- Чим ми займаємось -- */
 .example {
@@ -238,7 +256,7 @@ img {
 }
 .team-text {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 16px;
   line-height: 1.19;
   text-align: center;
 }
@@ -249,6 +267,101 @@ img {
 .team-description {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+.team-social {
+  display: flex;
+  justify-content:center;
+}
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background: var(--white-text-color);
+  border-radius: 50%;
+}
+.social-item:not(:first-child) {
+  margin-left: 10px;
+}
+.social-link:hover svg,
+.social-link:focus svg {
+  fill: var(--white-text-color);
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--accent-color);
+}
+.team-card {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+   0px 1px 1px rgba(0, 0, 0, 0.14),
+   0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background: var(--white-text-color);
+}
+.team-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--icon-color);
+}
+/* Клієнти */
+.clients-list {
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+}
+.clients-item {
+  border: 1px solid var(--icon-color);
+  border-radius: 4px;
+}
+.clients-item:not(:first-child) {
+  margin-left: 30px;
+}
+.clients-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 168px;
+  height: 90px;
+}
+.clients-icon {
+  fill: var(--icon-color);
+  width: 106px;
+  height: 60px;
+}
+.clients-link:hover svg,
+.clients-link:focus svg {
+  fill: var(--accent-color);
+}
+.clients-item:hover,
+.clients-item:focus {
+  border: 1px solid var(--accent-color);
+}
+/* button portfolio */
+.button-filter {
+  display: inline-block;
+  padding: 6px 22px;
+  min-width: 73px;
+  border-radius: 4px;
+  border: var(--border-filter-button);
+
+  color: var(--title-text-color);
+  background-color: var(--secondary-background-color);
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.63;
+  letter-spacing: 0.03em;
+  text-align: center;
+  cursor: pointer;
+}
+.button-filter:hover,
+.button-filter:focus {
+  color: var(--white-text-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+  0px 1px 2px rgba(0, 0, 0, 0.08),
+  0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* portfolio */
 .filter {
@@ -268,7 +381,6 @@ img {
   clip: rect(0000);
   overflow: hidden;
 }
-
 .filter .item-filter + .item-filter {
   margin-left: 8px;
 }
@@ -314,10 +426,19 @@ img {
   border-left: 1px solid var(--border-button-portfolio);
   border-right: 1px solid var(--border-button-portfolio);
 }
+.card-item:hover,
+.card-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+  0px 4px 4px rgba(0, 0, 0, 0.06),
+  1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 /*-footer */
 .footer {
   padding: 60px 0;
   background-color: var(--black-background-color);
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .footer-logo {
   display: block;
@@ -351,4 +472,42 @@ img {
 .footer-list .link:hover,
 .footer-list .link:focus {
   color: var(--accent-color);
+}
+.footer-title {
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--white-text-color);
+}
+.footer-social {
+  display: block;
+  margin-left: 70px;
+
+}
+.footer-social-list {
+  display: flex;
+}
+.footer-container {
+  display: flex;
+}
+.footer-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--white-text-color);
+}
+.footer-social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+.footer-social-link:hover svg {
+  fill: var(--white-text-color);
+}
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--accent-color);
 }
